--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^12.23.12",
     "next": "^14.0.0",
+    "next-auth": "^4.24.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "next-auth": "^4.24.0",
-    "@prisma/client": "^5.0.0",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
